<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cg.watbalance.balanceScreen"
    tools:showIn="@layout/app_bar_balance_screen">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMaterialGreen"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="12dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:text="@string/DefaultAmt"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/MP"
                        android:src="@drawable/ic_local_restaurant_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/MP"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/mealPlanData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/DefaultAmt"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/colorMaterialGreen"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/FD"
                        android:src="@drawable/ic_local_atm_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/FD"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/flexDollarsData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/DefaultAmt"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/colorMaterialGreen"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/Other"
                        android:src="@drawable/ic_help_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/Other"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/otherData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/DefaultAmt"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/colorMaterialGreen"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorMaterialBlue"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayBalanceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/dailyBal"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/dayBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/dayBalanceText"
                    android:gravity="end"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/DefaultAmt"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/datePassed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="The Term End Date has passed!\nGo to Settings > Term End to set a new date."
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/spentTodayRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorMaterialRed"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todaySpentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/spentToday"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/todaySpent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/todaySpentText"
                    android:gravity="end"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/DefaultAmt"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/todayLeftRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorMaterialGreen"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dailyLeftText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/amountLeft"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/todayLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/dailyLeftText"
                    android:gravity="end"
                    android:paddingBottom="12dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/DefaultAmt"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_sync_grey_24dp" />

        <TextView
            android:id="@+id/updateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
